--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "eslint-fix": "npm run eslint -- --fix",
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint-fix": "npm run stylelint -- --fix",
-    "release": "./scripts/release.js"
+    "release": "./scripts/release.js",
+    "sync": "npm run build-storybook && anima-storybook sync"
   },
   "repository": {
     "type": "git",
@@ -126,6 +127,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "acorn": "^8.7.1",
+    "anima-storybook-cli": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
